--- a/notebook/03_recommender.ipynb
+++ b/notebook/03_recommender.ipynb
@@ -49,9 +49,23 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Cannot run multiple SparkContexts at once; existing SparkContext(app=MSIAM part III - Matrix Factorization, master=local[*]) created by __init__ at <ipython-input-1-8ff3678c3768>:8 ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-8ff3678c3768>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mconf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msetAppName\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"MSIAM part III - Matrix Factorization\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0msc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mSparkContext\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mconf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mconf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/usr/local/spark/python/pyspark/context.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, master, appName, sparkHome, pyFiles, environment, batchSize, serializer, conf, gateway, jsc, profiler_cls)\u001b[0m\n\u001b[1;32m    110\u001b[0m         \"\"\"\n\u001b[1;32m    111\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_callsite\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfirst_spark_call\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mCallSite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 112\u001b[0;31m         \u001b[0mSparkContext\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_ensure_initialized\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgateway\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mgateway\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    113\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    114\u001b[0m             self._do_init(master, appName, sparkHome, pyFiles, environment, batchSize, serializer,\n",
+      "\u001b[0;32m/usr/local/spark/python/pyspark/context.py\u001b[0m in \u001b[0;36m_ensure_initialized\u001b[0;34m(cls, instance, gateway)\u001b[0m\n\u001b[1;32m    257\u001b[0m                         \u001b[0;34m\" created by %s at %s:%s \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    258\u001b[0m                         % (currentAppName, currentMaster,\n\u001b[0;32m--> 259\u001b[0;31m                             callsite.function, callsite.file, callsite.linenum))\n\u001b[0m\u001b[1;32m    260\u001b[0m                 \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    261\u001b[0m                     \u001b[0mSparkContext\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_active_spark_context\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minstance\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: Cannot run multiple SparkContexts at once; existing SparkContext(app=MSIAM part III - Matrix Factorization, master=local[*]) created by __init__ at <ipython-input-1-8ff3678c3768>:8 "
+     ]
+    }
+   ],
    "source": [
     "# set up spark environment (Using Spark Local Mode)\n",
     "from pyspark import SparkContext, SparkConf\n",
@@ -74,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -101,6 +115,10 @@
     "\n",
     "# path to MovieLens dataset\n",
     "movieLensHomeDir=\"data/movielens/medium/\"\n",
+    "\n",
+    "\n",
+    "# movies is an RDD of (movieID, title, genres)\n",
+    "moviesRDD = sc.textFile(movieLensHomeDir + \"movies.dat\").map(parseMovie).setName(\"movies\").cache()\n",
     "\n",
     "# ratings is an RDD of (userID, movieID, rating)\n",
     "ratingsRDD = sc.textFile(movieLensHomeDir + \"ratings.dat\").map(parseRating).setName(\"ratings\").cache()\n",
@@ -138,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -148,22 +166,8 @@
      "output_type": "stream",
      "text": [
       "The number of examples in the dataset :  1000209\n",
-      "The number of examples in the training dataset :  1000209\n",
-      "The number of examples in the testing dataset :  1000209\n",
-      "P contains user information in a latent spaceof size 3.\n",
-      " [[  1.00000000e+00   1.19300000e+03   5.00000000e+00]\n",
-      " [  1.00000000e+00   6.61000000e+02   3.00000000e+00]\n",
-      " [  1.00000000e+00   9.14000000e+02   3.00000000e+00]\n",
-      " ..., \n",
-      " [  6.04000000e+03   5.62000000e+02   5.00000000e+00]\n",
-      " [  6.04000000e+03   1.09600000e+03   4.00000000e+00]\n",
-      " [  6.04000000e+03   1.09700000e+03   4.00000000e+00]]\n",
-      "Q contains item information in the same latent space of size 3. [['1' 'Toy Story (1995)' \"Animation|Children's|Comedy\"]\n",
-      " ['2' 'Jumanji (1995)' \"Adventure|Children's|Fantasy\"]\n",
-      " ['3' 'Grumpier Old Men (1995)' 'Comedy|Romance']\n",
-      " ['4' 'Waiting to Exhale (1995)' 'Comedy|Drama']\n",
-      " ['5' 'Father of the Bride Part II (1995)' 'Comedy']]\n",
-      "3883\n"
+      "The number of examples in the training dataset :  699709\n",
+      "The number of examples in the testing dataset :  300500\n"
      ]
     }
    ],
@@ -172,18 +176,243 @@
     "\n",
     "trainingSample, testingSample = ratingsRDD.randomSplit([70, 30])\n",
     "print(\"The number of examples in the dataset : \",ratingsRDD.count())\n",
-    "print(\"The number of examples in the training dataset : \",ratingsRDD.count())\n",
-    "print(\"The number of examples in the testing dataset : \",ratingsRDD.count())\n",
+    "print(\"The number of examples in the training dataset : \",trainingSample.count())\n",
+    "print(\"The number of examples in the testing dataset : \",testingSample.count())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Genres of movie \"Pocahontas (1995)\":\n",
+      " ['Animation', \"Children's\", 'Musical', 'Romance'] \n",
+      "\n",
+      "Five movies from genre \"Comedy\":\n",
+      " ['Toy Story (1995)' 'Grumpier Old Men (1995)' 'Waiting to Exhale (1995)'\n",
+      " 'Father of the Bride Part II (1995)' 'Sabrina (1995)'] \n",
+      "\n",
+      "There are 18 different genres:\n",
+      " ['Musical', 'Fantasy', 'Documentary', \"Children's\", 'Horror', 'Drama', 'Thriller', 'Action', 'Sci-Fi', 'Western', 'Romance', 'Adventure', 'Film-Noir', 'Crime', 'War', 'Animation', 'Mystery', 'Comedy'] \n",
+      "\n",
+      "Check from dictionnary:\n",
+      " 18 Genres:\n",
+      " dict_keys([\"Children's\", 'Romance', 'Fantasy', 'Comedy', 'Thriller', 'Western', 'Action', 'War', 'Sci-Fi', 'Drama', 'Musical', 'Film-Noir', 'Horror', 'Documentary', 'Animation', 'Mystery', 'Adventure', 'Crime']) \n",
+      "\n",
+      "Number of movies having \"Comedy\" in their genres : 1200\n",
+      "Check from dictionnary: 1200\n",
+      "Number of movies having Musical in their genres : 114\n",
+      "Check from RDD, the number of movies having Musical in their genres: 114\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create moviesGenresRDD, a new RDD of (genre, list_of_movies)\n",
+    "genres = moviesRDD.map(lambda x : x[2]).flatMap(lambda x : x.split(\"|\")).distinct()\n",
     "\n",
-    "moviesRDD = sc.textFile(movieLensHomeDir + \"movies.dat\").map(parseMovie).setName(\"movies\").cache()\n",
+    "def getGenresOfMovie(movie):\n",
+    "    return moviesRDD.filter(lambda x : x[1] == movie).map(lambda y : y[2]).flatMap(lambda x : x.split(\"|\")).collect()\n",
+    "    \n",
+    "def getMoviesFromGenre(genre):\n",
+    "    return moviesRDD.filter(lambda x : genre in x[2]).map(lambda y : y[1]).collect()\n",
     "\n",
-    "P = np.asmatrix(ratingsRDD.collect())\n",
-    "print(\"P contains user information in a latent spaceof size 3.\\n\",P)\n",
-    "Q = np.asmatrix(moviesRDD.take(5))\n",
-    "print(\"Q contains item information in the same latent space of size 3.\",Q)\n",
+    "genres_dict = {}\n",
+    "for g in genres.collect() :\n",
+    "    genres_dict_temp = {g:getMoviesFromGenre(g)}\n",
+    "    genres_dict.update(genres_dict_temp)\n",
     "\n",
-    "moviesDistinct = moviesRDD.distinct().count()\n",
-    "print(moviesDistinct)"
+    "moviesGenresRDD = genres.map(lambda genre : (genre,genres_dict[genre]))\n",
+    "\n",
+    "##TEST\n",
+    "g = getGenresOfMovie(\"Pocahontas (1995)\")\n",
+    "print(\"Genres of movie \\\"Pocahontas (1995)\\\":\\n\",g,\"\\n\")\n",
+    "m = getMoviesFromGenre(\"Comedy\")\n",
+    "print(\"Five movies from genre \\\"Comedy\\\":\\n\",np.asarray(m)[:5],\"\\n\")\n",
+    "print(\"There are\",genres.count(),\"different genres:\\n\",genres.collect(),\"\\n\")\n",
+    "print(\"Check from dictionnary:\\n\",len(genres_dict.keys()),\"Genres:\\n\",genres_dict.keys(),\"\\n\")\n",
+    "print(\"Number of movies having \\\"Comedy\\\" in their genres :\",moviesRDD.filter(lambda x : \"Comedy\" in x[2]).count())\n",
+    "print(\"Check from dictionnary:\",len(genres_dict[\"Comedy\"]))\n",
+    "print(\"Number of movies having\",moviesGenresRDD.first()[0],\"in their genres :\",moviesRDD.filter(lambda x : \"Musical\" in x[2]).count())\n",
+    "print(\"Check from RDD, the number of movies having\",moviesGenresRDD.first()[0],\"in their genres:\",len(moviesGenresRDD.first()[1]))\n",
+    "\n",
+    "#genres_dict.clear()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Define factors = Genres (k = 18 factors)\n",
+    "\n",
+    "# How to attribute values to factors\n",
+    "# For vector q_i:\n",
+    "#    each movie (item), have factor_value = 1 for its genres and -1 for others \n",
+    "# For vector p_u:\n",
+    "#    each user, have factor_value = Average_ratings_of_movies_of_factor = ratings / number_of_movies_of_factor\n",
+    "  \n",
+    "movies_dict = {}\n",
+    "for i,title in moviesRDD.map(lambda x : (x[0],x[1])).collect():\n",
+    "    movies_dict_temp = {i:title}\n",
+    "    movies_dict.update(movies_dict_temp)\n",
+    "\n",
+    "def update_factors(movieIdListOfGenres,rating,p_u):\n",
+    "    for f in movieIdListOfGenres:\n",
+    "        p_u[f] = (p_u[f][0]+1, p_u[f][1] + rating)\n",
+    "    return p_u\n",
+    "\n",
+    "def compute_final_p_u(p_u):\n",
+    "    for f in genres.collect():\n",
+    "        if p_u[f][0] != 0:\n",
+    "            p_u[f] = (p_u[f][0]+1, p_u[f][1] / p_u[f][0])\n",
+    "    return p_u\n",
+    "\n",
+    "def get_preferences(user,p_u):\n",
+    "    pref = []\n",
+    "    for g in genres.collect():\n",
+    "        if p_u[g][0]>0:\n",
+    "            pref.append(g)\n",
+    "    return pref\n",
+    "            \n",
+    "\n",
+    "def get_genres_list_of_movieId(movie):\n",
+    "    movieTitle = movies_dict[movie]\n",
+    "    #print(\"movie (id =\",movie,\"):\",movieTitle)\n",
+    "    genreslist = moviesRDD.map(lambda x : x[2]).flatMap(lambda x : x.split(\"|\")).distinct()\n",
+    "    return getGenresOfMovie(movieTitle)\n",
+    "    \n",
+    "def computePu(user):\n",
+    "    p_u = {}\n",
+    "    for g in genres.collect() :\n",
+    "        p_u_temp = {g:(0,0)} # {genre, (number of movie with that genre rated; sum of eatings; average)}\n",
+    "        p_u.update(p_u_temp)\n",
+    "    userRatingsRDD = trainingSample.filter(lambda x : x[0] == user)\n",
+    "    userMoviesList = userRatingsRDD.map(lambda x : x[1]).collect()\n",
+    "    userRatingsList = userRatingsRDD.map(lambda x : x[2]).collect()\n",
+    "    print(\"Number of movies rated:\",len(userMoviesList))\n",
+    "    print(\"Movies rated:\",userMoviesList)\n",
+    "    for l in range(0,len(userMoviesList)):\n",
+    "        movieIdListOfGenres = get_genres_list_of_movieId(userMoviesList[l])\n",
+    "        rating = userRatingsList[l]\n",
+    "        #print(movieIdListOfGenres,\" ///// \", rating)\n",
+    "        p_u = update_factors(movieIdListOfGenres,rating,p_u)\n",
+    "    p_u = compute_final_p_u(p_u)\n",
+    "    print(\"User preferences :\\n\",get_preferences(user,p_u))\n",
+    "    return p_u\n",
+    "    \n",
+    "usersList = trainingSample.map(lambda r: r[0]).distinct().collect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def computeMovieRatingsAverage(movieId):\n",
+    "    movieIdRatings = trainingSample.filter(lambda x : x[1] == movieId).map(lambda x : x[2])\n",
+    "    movieIdRatingsAverage = movieIdRatings.mean()\n",
+    "    print(\"The average of ratings (for the movieId =\",movieId,\")\",movieIdRatingsAverage)\n",
+    "    return movieIdRatingsAverage\n",
+    "\n",
+    "def computeQi(item):\n",
+    "    q_i = {}\n",
+    "    for g in genres.collect() :\n",
+    "        q_i_temp = {g:0} \n",
+    "        q_i.update(q_i_temp)\n",
+    "        \n",
+    "    itemGenres = get_genres_list_of_movieId(item)\n",
+    "    for genre in itemGenres:\n",
+    "        q_i[genre] = computeMovieRatingsAverage(item)/len(itemGenres)\n",
+    "    return q_i       \n",
+    "    \n",
+    "itemsList = moviesRDD.map(lambda r: r[0]).distinct().collect()\n",
+    "print(itemsList)\n",
+    "#for i in itemsList:\n",
+    "#    print(getGenresOfMovie(i))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All genres:\n",
+      " ['Musical', 'Fantasy', 'Documentary', \"Children's\", 'Horror', 'Drama', 'Thriller', 'Action', 'Sci-Fi', 'Western', 'Romance', 'Adventure', 'Film-Noir', 'Crime', 'War', 'Animation', 'Mystery', 'Comedy'] \n",
+      "\n",
+      "User = 1\n",
+      "Movie = Christmas Story, A (1983)\n",
+      "Number of movies rated: 42\n",
+      "Movies rated: [661, 914, 3408, 2355, 1287, 2804, 594, 919, 2918, 1035, 2791, 2018, 3105, 2797, 2321, 720, 527, 2340, 48, 1097, 1721, 1545, 745, 2294, 3186, 588, 1907, 1836, 1022, 2762, 150, 1, 1961, 1962, 2692, 260, 1029, 1207, 531, 3114, 608, 1246]\n",
+      "User preferences :\n",
+      " ['Musical', 'Fantasy', \"Children's\", 'Drama', 'Thriller', 'Action', 'Sci-Fi', 'Romance', 'Adventure', 'Crime', 'War', 'Animation', 'Comedy']\n",
+      "The average of ratings (for the movieId = 2804 ) 4.216931216931217\n",
+      "The average of ratings (for the movieId = 2804 ) 4.216931216931217\n",
+      "\n",
+      "Pu = \n",
+      " [ 4.22222222  4.          0.          4.26666667  0.          4.38888889\n",
+      "  3.66666667  4.33333333  4.          0.          3.8         4.33333333\n",
+      "  0.          4.          5.          4.14285714  0.          4.1       ]\n",
+      "\n",
+      "Qi =\n",
+      " [ 0.          0.          0.          0.          0.          2.10846561\n",
+      "  0.          0.          0.          0.          0.          0.          0.\n",
+      "  0.          0.          0.          0.          2.10846561]\n",
+      "\n",
+      "Dot product = 17.8985302763\n",
+      "True rating = [(1, 2804, 5.0)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def dict2list(dic,col):\n",
+    "    index = 0\n",
+    "    _list = np.zeros(18)\n",
+    "    for f in genres.collect():\n",
+    "        if col != 0:\n",
+    "            _list[index] = dic[f][col]\n",
+    "        else:\n",
+    "            _list[index] = dic[f]\n",
+    "        index = index + 1\n",
+    "    return _list\n",
+    "    \n",
+    "print(\"All genres:\\n\",genres.collect(),\"\\n\")\n",
+    "\n",
+    "user = 1\n",
+    "item = 2804\n",
+    "\n",
+    "print(\"User =\",user) \n",
+    "print(\"Movie =\",movies_dict[item])\n",
+    "\n",
+    "Pu = dict2list(computePu(user),1)\n",
+    "Qi = dict2list(computeQi(item),0)\n",
+    "\n",
+    "print(\"\\nPu = \\n\",Pu) \n",
+    "print(\"\\nQi =\\n\",Qi)\n",
+    "\n",
+    "ps = np.vdot(Pu,Qi)\n",
+    "print(\"\\nDot product =\",ps)\n",
+    "\n",
+    "realRating = ratingsRDD.filter(lambda x : x[0]==user).filter(lambda x : x[1]==item).collect()\n",
+    "print(\"True rating =\",realRating)\n",
+    "# western movie eg : \"Wild Bill (1995)\""
    ]
   },
   {
