--- a/notebook/03_recommender.ipynb
+++ b/notebook/03_recommender.ipynb
@@ -47,25 +47,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "Cannot run multiple SparkContexts at once; existing SparkContext(app=MSIAM part III - Matrix Factorization, master=local[*]) created by __init__ at <ipython-input-1-8ff3678c3768>:8 ",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-8ff3678c3768>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mconf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msetAppName\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"MSIAM part III - Matrix Factorization\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0msc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mSparkContext\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mconf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mconf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/usr/local/spark/python/pyspark/context.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, master, appName, sparkHome, pyFiles, environment, batchSize, serializer, conf, gateway, jsc, profiler_cls)\u001b[0m\n\u001b[1;32m    110\u001b[0m         \"\"\"\n\u001b[1;32m    111\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_callsite\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfirst_spark_call\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mCallSite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 112\u001b[0;31m         \u001b[0mSparkContext\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_ensure_initialized\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgateway\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mgateway\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    113\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    114\u001b[0m             self._do_init(master, appName, sparkHome, pyFiles, environment, batchSize, serializer,\n",
-      "\u001b[0;32m/usr/local/spark/python/pyspark/context.py\u001b[0m in \u001b[0;36m_ensure_initialized\u001b[0;34m(cls, instance, gateway)\u001b[0m\n\u001b[1;32m    257\u001b[0m                         \u001b[0;34m\" created by %s at %s:%s \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    258\u001b[0m                         % (currentAppName, currentMaster,\n\u001b[0;32m--> 259\u001b[0;31m                             callsite.function, callsite.file, callsite.linenum))\n\u001b[0m\u001b[1;32m    260\u001b[0m                 \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    261\u001b[0m                     \u001b[0mSparkContext\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_active_spark_context\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minstance\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: Cannot run multiple SparkContexts at once; existing SparkContext(app=MSIAM part III - Matrix Factorization, master=local[*]) created by __init__ at <ipython-input-1-8ff3678c3768>:8 "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# set up spark environment (Using Spark Local Mode)\n",
     "from pyspark import SparkContext, SparkConf\n",
@@ -166,8 +152,8 @@
      "output_type": "stream",
      "text": [
       "The number of examples in the dataset :  1000209\n",
-      "The number of examples in the training dataset :  699709\n",
-      "The number of examples in the testing dataset :  300500\n"
+      "The number of examples in the training dataset :  699742\n",
+      "The number of examples in the testing dataset :  300467\n"
      ]
     }
    ],
@@ -186,32 +172,7 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Genres of movie \"Pocahontas (1995)\":\n",
-      " ['Animation', \"Children's\", 'Musical', 'Romance'] \n",
-      "\n",
-      "Five movies from genre \"Comedy\":\n",
-      " ['Toy Story (1995)' 'Grumpier Old Men (1995)' 'Waiting to Exhale (1995)'\n",
-      " 'Father of the Bride Part II (1995)' 'Sabrina (1995)'] \n",
-      "\n",
-      "There are 18 different genres:\n",
-      " ['Musical', 'Fantasy', 'Documentary', \"Children's\", 'Horror', 'Drama', 'Thriller', 'Action', 'Sci-Fi', 'Western', 'Romance', 'Adventure', 'Film-Noir', 'Crime', 'War', 'Animation', 'Mystery', 'Comedy'] \n",
-      "\n",
-      "Check from dictionnary:\n",
-      " 18 Genres:\n",
-      " dict_keys([\"Children's\", 'Romance', 'Fantasy', 'Comedy', 'Thriller', 'Western', 'Action', 'War', 'Sci-Fi', 'Drama', 'Musical', 'Film-Noir', 'Horror', 'Documentary', 'Animation', 'Mystery', 'Adventure', 'Crime']) \n",
-      "\n",
-      "Number of movies having \"Comedy\" in their genres : 1200\n",
-      "Check from dictionnary: 1200\n",
-      "Number of movies having Musical in their genres : 114\n",
-      "Check from RDD, the number of movies having Musical in their genres: 114\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Create moviesGenresRDD, a new RDD of (genre, list_of_movies)\n",
     "genres = moviesRDD.map(lambda x : x[2]).flatMap(lambda x : x.split(\"|\")).distinct()\n",
@@ -230,36 +191,30 @@
     "moviesGenresRDD = genres.map(lambda genre : (genre,genres_dict[genre]))\n",
     "\n",
     "##TEST\n",
-    "g = getGenresOfMovie(\"Pocahontas (1995)\")\n",
-    "print(\"Genres of movie \\\"Pocahontas (1995)\\\":\\n\",g,\"\\n\")\n",
-    "m = getMoviesFromGenre(\"Comedy\")\n",
-    "print(\"Five movies from genre \\\"Comedy\\\":\\n\",np.asarray(m)[:5],\"\\n\")\n",
-    "print(\"There are\",genres.count(),\"different genres:\\n\",genres.collect(),\"\\n\")\n",
-    "print(\"Check from dictionnary:\\n\",len(genres_dict.keys()),\"Genres:\\n\",genres_dict.keys(),\"\\n\")\n",
-    "print(\"Number of movies having \\\"Comedy\\\" in their genres :\",moviesRDD.filter(lambda x : \"Comedy\" in x[2]).count())\n",
-    "print(\"Check from dictionnary:\",len(genres_dict[\"Comedy\"]))\n",
-    "print(\"Number of movies having\",moviesGenresRDD.first()[0],\"in their genres :\",moviesRDD.filter(lambda x : \"Musical\" in x[2]).count())\n",
-    "print(\"Check from RDD, the number of movies having\",moviesGenresRDD.first()[0],\"in their genres:\",len(moviesGenresRDD.first()[1]))\n",
+    "#g = getGenresOfMovie(\"Pocahontas (1995)\")\n",
+    "#print(\"Genres of movie \\\"Pocahontas (1995)\\\":\\n\",g,\"\\n\")\n",
+    "#m = getMoviesFromGenre(\"Comedy\")\n",
+    "#print(\"Five movies from genre \\\"Comedy\\\":\\n\",np.asarray(m)[:5],\"\\n\")\n",
+    "#print(\"There are\",genres.count(),\"different genres:\\n\",genres.collect(),\"\\n\")\n",
+    "#print(\"Check from dictionnary:\\n\",len(genres_dict.keys()),\"Genres:\\n\",genres_dict.keys(),\"\\n\")\n",
+    "#print(\"Number of movies having \\\"Comedy\\\" in their genres :\",moviesRDD.filter(lambda x : \"Comedy\" in x[2]).count())\n",
+    "#print(\"Check from dictionnary:\",len(genres_dict[\"Comedy\"]))\n",
+    "#print(\"Number of movies having\",moviesGenresRDD.first()[0],\"in their genres :\",moviesRDD.filter(lambda x : \"Musical\" in x[2]).count())\n",
+    "#print(\"Check from RDD, the number of movies having\",moviesGenresRDD.first()[0],\"in their genres:\",len(moviesGenresRDD.first()[1]))\n",
     "\n",
     "#genres_dict.clear()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "# Define factors = Genres (k = 18 factors)\n",
+    "# Compute Pu\n",
     "\n",
-    "# How to attribute values to factors\n",
-    "# For vector q_i:\n",
-    "#    each movie (item), have factor_value = 1 for its genres and -1 for others \n",
-    "# For vector p_u:\n",
-    "#    each user, have factor_value = Average_ratings_of_movies_of_factor = ratings / number_of_movies_of_factor\n",
-    "  \n",
     "movies_dict = {}\n",
     "for i,title in moviesRDD.map(lambda x : (x[0],x[1])).collect():\n",
     "    movies_dict_temp = {i:title}\n",
@@ -290,7 +245,7 @@
     "    genreslist = moviesRDD.map(lambda x : x[2]).flatMap(lambda x : x.split(\"|\")).distinct()\n",
     "    return getGenresOfMovie(movieTitle)\n",
     "    \n",
-    "def computePu(user):\n",
+    "def computePu(user,debug):\n",
     "    p_u = {}\n",
     "    for g in genres.collect() :\n",
     "        p_u_temp = {g:(0,0)} # {genre, (number of movie with that genre rated; sum of eatings; average)}\n",
@@ -298,15 +253,16 @@
     "    userRatingsRDD = trainingSample.filter(lambda x : x[0] == user)\n",
     "    userMoviesList = userRatingsRDD.map(lambda x : x[1]).collect()\n",
     "    userRatingsList = userRatingsRDD.map(lambda x : x[2]).collect()\n",
-    "    print(\"Number of movies rated:\",len(userMoviesList))\n",
-    "    print(\"Movies rated:\",userMoviesList)\n",
+    "    if debug!=0:\n",
+    "        print(\"Number of movies rated:\",len(userMoviesList))\n",
+    "        print(\"Movies rated:\",userMoviesList)\n",
     "    for l in range(0,len(userMoviesList)):\n",
     "        movieIdListOfGenres = get_genres_list_of_movieId(userMoviesList[l])\n",
     "        rating = userRatingsList[l]\n",
-    "        #print(movieIdListOfGenres,\" ///// \", rating)\n",
     "        p_u = update_factors(movieIdListOfGenres,rating,p_u)\n",
     "    p_u = compute_final_p_u(p_u)\n",
-    "    print(\"User preferences :\\n\",get_preferences(user,p_u))\n",
+    "    if debug!=0:\n",
+    "        print(\"User preferences :\\n\",get_preferences(user,p_u))\n",
     "    return p_u\n",
     "    \n",
     "usersList = trainingSample.map(lambda r: r[0]).distinct().collect()"
@@ -314,75 +270,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "def computeMovieRatingsAverage(movieId):\n",
-    "    movieIdRatings = trainingSample.filter(lambda x : x[1] == movieId).map(lambda x : x[2])\n",
-    "    movieIdRatingsAverage = movieIdRatings.mean()\n",
-    "    print(\"The average of ratings (for the movieId =\",movieId,\")\",movieIdRatingsAverage)\n",
-    "    return movieIdRatingsAverage\n",
+    "# Compute Qi\n",
     "\n",
-    "def computeQi(item):\n",
+    "def occurance(_list,x):\n",
+    "    nb=0\n",
+    "    for i in _list:\n",
+    "        if i == x:\n",
+    "            nb = nb + 1\n",
+    "    return nb\n",
+    "\n",
+    "def parseGenres(genres):\n",
+    "    fields = genres.split(\"|\")\n",
+    "    return fields\n",
+    "\n",
+    "a = moviesRDD.map(lambda x : x[2]).distinct().map(lambda x : parseGenres(x))\n",
+    "\n",
+    "def brothers(genre):\n",
+    "    brothersList = []\n",
+    "    for genresList in a.collect():\n",
+    "        if genre in genresList:\n",
+    "            for newGenre in genresList:\n",
+    "                if newGenre not in brothersList:\n",
+    "                    brothersList.append(newGenre)\n",
+    "    return brothersList\n",
+    "    \n",
+    "def notBrothers(genre):\n",
+    "    notBrothersList = []\n",
+    "    for g in genres.collect():\n",
+    "        if genre not in brothers(g):\n",
+    "            notBrothersList.append(g)      \n",
+    "    return notBrothersList\n",
+    "\n",
+    "def computeQi(item,debug):\n",
     "    q_i = {}\n",
     "    for g in genres.collect() :\n",
     "        q_i_temp = {g:0} \n",
     "        q_i.update(q_i_temp)\n",
     "        \n",
     "    itemGenres = get_genres_list_of_movieId(item)\n",
+    "    _list = []\n",
+    "    final_list = []\n",
     "    for genre in itemGenres:\n",
-    "        q_i[genre] = computeMovieRatingsAverage(item)/len(itemGenres)\n",
+    "        q_i[genre] = 1/len(itemGenres)\n",
+    "        for g in notBrothers(genre):\n",
+    "            _list.append(g)            \n",
+    "    for i in genres.collect():\n",
+    "        if (occurance(_list,i)==len(itemGenres)):\n",
+    "            final_list.append(i)\n",
+    "    \n",
+    "    for j in final_list:\n",
+    "        q_i[j] = -1/(len(final_list)+len(itemGenres))\n",
     "    return q_i       \n",
     "    \n",
-    "itemsList = moviesRDD.map(lambda r: r[0]).distinct().collect()\n",
-    "print(itemsList)\n",
-    "#for i in itemsList:\n",
-    "#    print(getGenresOfMovie(i))"
+    "itemsList = moviesRDD.map(lambda r: r[0]).distinct().collect()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "All genres:\n",
-      " ['Musical', 'Fantasy', 'Documentary', \"Children's\", 'Horror', 'Drama', 'Thriller', 'Action', 'Sci-Fi', 'Western', 'Romance', 'Adventure', 'Film-Noir', 'Crime', 'War', 'Animation', 'Mystery', 'Comedy'] \n",
-      "\n",
-      "User = 1\n",
-      "Movie = Christmas Story, A (1983)\n",
-      "Number of movies rated: 42\n",
-      "Movies rated: [661, 914, 3408, 2355, 1287, 2804, 594, 919, 2918, 1035, 2791, 2018, 3105, 2797, 2321, 720, 527, 2340, 48, 1097, 1721, 1545, 745, 2294, 3186, 588, 1907, 1836, 1022, 2762, 150, 1, 1961, 1962, 2692, 260, 1029, 1207, 531, 3114, 608, 1246]\n",
-      "User preferences :\n",
-      " ['Musical', 'Fantasy', \"Children's\", 'Drama', 'Thriller', 'Action', 'Sci-Fi', 'Romance', 'Adventure', 'Crime', 'War', 'Animation', 'Comedy']\n",
-      "The average of ratings (for the movieId = 2804 ) 4.216931216931217\n",
-      "The average of ratings (for the movieId = 2804 ) 4.216931216931217\n",
-      "\n",
-      "Pu = \n",
-      " [ 4.22222222  4.          0.          4.26666667  0.          4.38888889\n",
-      "  3.66666667  4.33333333  4.          0.          3.8         4.33333333\n",
-      "  0.          4.          5.          4.14285714  0.          4.1       ]\n",
-      "\n",
-      "Qi =\n",
-      " [ 0.          0.          0.          0.          0.          2.10846561\n",
-      "  0.          0.          0.          0.          0.          0.          0.\n",
-      "  0.          0.          0.          0.          2.10846561]\n",
-      "\n",
-      "Dot product = 17.8985302763\n",
-      "True rating = [(1, 2804, 5.0)]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# Compute predictive rating\n",
     "def dict2list(dic,col):\n",
+    "\n",
     "    index = 0\n",
     "    _list = np.zeros(18)\n",
     "    for f in genres.collect():\n",
@@ -392,33 +351,107 @@
     "            _list[index] = dic[f]\n",
     "        index = index + 1\n",
     "    return _list\n",
-    "    \n",
-    "print(\"All genres:\\n\",genres.collect(),\"\\n\")\n",
     "\n",
-    "user = 1\n",
-    "item = 2804\n",
+    "def computePS_u_i(item,user,debug):\n",
+    "    if debug!=0:\n",
+    "        print(\"All genres:\\n\",genres.collect(),\"\\n\")\n",
+    "        print(\"User =\",user) \n",
+    "        print(\"Movie =\",item,\":\",movies_dict[item])\n",
     "\n",
-    "print(\"User =\",user) \n",
-    "print(\"Movie =\",movies_dict[item])\n",
+    "    Pu = dict2list(computePu(user,debug),1)\n",
+    "    Qi = dict2list(computeQi(item,debug),0)\n",
     "\n",
-    "Pu = dict2list(computePu(user),1)\n",
-    "Qi = dict2list(computeQi(item),0)\n",
+    "    if debug!=0:\n",
+    "        print(\"\\nPu = \\n\",Pu) \n",
+    "        print(\"\\nQi =\\n\",Qi)\n",
     "\n",
-    "print(\"\\nPu = \\n\",Pu) \n",
-    "print(\"\\nQi =\\n\",Qi)\n",
+    "    ps = np.vdot(Pu,Qi)\n",
+    "    if debug!=0:\n",
+    "        print(\"\\nDot product =\",ps)\n",
     "\n",
-    "ps = np.vdot(Pu,Qi)\n",
-    "print(\"\\nDot product =\",ps)\n",
+    "    realRating = trainingSample.filter(lambda x : x[0]==user).filter(lambda x : x[1]==item).collect()\n",
+    "    if debug!=0:\n",
+    "        print(\"True rating =\",realRating)\n",
+    "    return ps\n",
     "\n",
-    "realRating = ratingsRDD.filter(lambda x : x[0]==user).filter(lambda x : x[1]==item).collect()\n",
-    "print(\"True rating =\",realRating)\n",
-    "# western movie eg : \"Wild Bill (1995)\""
+    "#ps = computePS_u_i(1378,453,1)\n",
+    "#ps = computePS_u_i(2692,68,1)\n",
+    "#print(ps)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pi =\n",
+      " [ 4.45454545  4.          0.          4.3125      0.          4.5\n",
+      "  3.66666667  4.          4.          0.          3.75        3.66666667\n",
+      "  0.          4.          5.          4.125       0.          4.09090909] \n",
+      "\n",
+      "qj =\n",
+      " [ 0.          0.          0.          0.33333333  0.          0.          0.\n",
+      "  0.          0.          0.          0.          0.          0.          0.\n",
+      "  0.          0.33333333  0.          0.33333333] \n",
+      "\n",
+      "Real rating : 5.0\n",
+      "Predicted rating : 4.17613636364\n",
+      "Mean Square Error = 0.678751291322\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Build factorization matrix\n",
+    "\n",
+    "m = len(usersList)\n",
+    "n = len(itemsList)\n",
+    "m = 5\n",
+    "n = 5\n",
+    "\n",
+    "def buildFactMatrix(n,m):\n",
+    "    print(\"m =\",m,\"n =\",n)\n",
+    "    factMatrix = np.eye(m,n)\n",
+    "    for u in range(0,m):\n",
+    "        for i in range(0,n):\n",
+    "            item = itemsList[i]\n",
+    "            user = usersList[u]\n",
+    "            factMatrix[u][i] = computePS_u_i(item,user,0)\n",
+    "            print(round(factMatrix[u][i],1),end = ' ')\n",
+    "        print(\"\\n\",end = '')\n",
+    "    return factMatrix\n",
+    "\n",
+    "def MSE(user,item,lamb):\n",
+    "    pi = []\n",
+    "    qj = []\n",
+    "    #pi = dict2list(computePu(usersList[i],0),1)\n",
+    "    pi = dict2list(computePu(user,0),1)\n",
+    "    print(\"pi =\\n\",pi,\"\\n\")\n",
+    "    #qj = dict2list(computeQi(itemsList[j],0),0)\n",
+    "    qj = dict2list(computeQi(item,0),0)\n",
+    "    print(\"qj =\\n\",qj,\"\\n\")\n",
+    "    #rij = trainingSample.filter(lambda x : x[0] == usersList[i]).filter(lambda y : y[1] == itemsList[j]).collect()\n",
+    "    rij = trainingSample.filter(lambda x : x[0] == user).filter(lambda y : y[1] == item).map(lambda z : z[2]).collect()[0]\n",
+    "    rijHat = np.vdot(pi,qj)\n",
+    "    print(\"Real rating :\",rij)\n",
+    "    print(\"Predicted rating :\",rijHat)\n",
+    "    e = pow(rij - rijHat,2) + lamb * (pow(np.linalg.norm(pi,2),2) + pow(np.linalg.norm(qj,2),2))\n",
+    "    return e\n",
+    "\n",
+    "print(\"Mean Square Error =\", MSE(1,1,0))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "$$  \\ell_{u_i,i_j}(P,Q)= \\left(r_{ij} - p_{i}^{\\top}q_{j}\\right)^2 + \\lambda(|| p_{i} ||^{2} + || q_{j} ||^2 )  $$\n",
+    "\n",
     "__Question 2__\n",
     "\n",
     "> Derive the update rules for gradient descent. \n",
